Testing code inspection in IntelliJ